metadata-sfdx/force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>Custom object that stores review records from the Thumbtack database.  Currently being used for 1 and 2 star review research and action.</description>
    <label>Review</label>
    <nameField>
        <label>Thumbtack Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>