metadata-sfdx/force-app/main/default/objects/Review__c/fields/bid_bid_id__c.field-meta.xml
<CustomField>
    <fullName>bid_bid_id__c</fullName>
    <label>Quote Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>