metadata-sfdx/force-app/main/default/objects/Review__c/fields/customer_email__c.field-meta.xml
<CustomField>
    <fullName>customer_email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>