metadata-sfdx/force-app/main/default/objects/Review__c/fields/customer_first_name__c.field-meta.xml
<CustomField>
    <fullName>customer_first_name__c</fullName>
    <label>Customer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>