metadata-sfdx/force-app/main/default/objects/Review__c/fields/customer_last_name__c.field-meta.xml
<CustomField>
    <fullName>customer_last_name__c</fullName>
    <label>Customer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>