metadata-sfdx/force-app/main/default/objects/Review__c/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviews (Customer Account)</relationshipLabel>
    <relationshipName>Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>