metadata-sfdx/force-app/main/default/objects/Review__c/fields/EmailSentNeedMoreInfo__c.field-meta.xml
<CustomField>
    <fullName>EmailSentNeedMoreInfo__c</fullName>
    <label>Email Sent - Need More Info</label>
    <type>DateTime</type>
</CustomField>