metadata-sfdx/force-app/main/default/objects/Review__c/fields/pro_email__c.field-meta.xml
<CustomField>
    <fullName>pro_email__c</fullName>
    <label>Pro Email</label>
    <type>Email</type>
</CustomField>