metadata-sfdx/force-app/main/default/objects/Review__c/fields/pro_last_name__c.field-meta.xml
<CustomField>
    <fullName>pro_last_name__c</fullName>
    <label>Pro Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>