metadata-sfdx/force-app/main/default/objects/Review__c/fields/ProAccount__c.field-meta.xml
<CustomField>
    <fullName>ProAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pro Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>