metadata-sfdx/force-app/main/default/objects/Review__c/fields/rca_name__c.field-meta.xml
<CustomField>
    <fullName>rca_name__c</fullName>
    <label>Request Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>