metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_private_feedback_to_reviewed_user__c.field-meta.xml
<CustomField>
    <fullName>rev_private_feedback_to_reviewed_user__c</fullName>
    <label>Review Private Feedback to Reviewed User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>