metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_rating__c.field-meta.xml
<CustomField>
    <fullName>rev_rating__c</fullName>
    <label>Review Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>