metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_rca_request_category_id__c.field-meta.xml
<CustomField>
    <fullName>rev_rca_request_category_id__c</fullName>
    <label>Request Category Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>