metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_response_text__c.field-meta.xml
<CustomField>
    <fullName>rev_response_text__c</fullName>
    <label>Review Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>