metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_review_id__c.field-meta.xml
<CustomField>
    <fullName>rev_review_id__c</fullName>
    <externalId>true</externalId>
    <label>Review Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>