metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_review_time__c.field-meta.xml
<CustomField>
    <fullName>rev_review_time__c</fullName>
    <label>Review Time</label>
    <type>DateTime</type>
</CustomField>