metadata-sfdx/force-app/main/default/objects/Review__c/fields/rev_usr_user_id_reviewed__c.field-meta.xml
<CustomField>
    <fullName>rev_usr_user_id_reviewed__c</fullName>
    <label>User Id Reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>