metadata-sfdx/force-app/main/default/objects/Review__c/fields/ReviewAudit__c.field-meta.xml
<CustomField>
    <fullName>ReviewAudit__c</fullName>
    <label>Review Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warn and Flag</fullName>
            </value>
            <value>
                <fullName>No Action Needed</fullName>
            </value>
            <value>
                <fullName>Immediate MI Action Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>