metadata-sfdx/force-app/main/default/objects/Review__c/fields/ReviewAuditOutcome__c.field-meta.xml
<CustomField>
    <fullName>ReviewAuditOutcome__c</fullName>
    <label>Review Audit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warned and Flagged</fullName>
            </value>
            <value>
                <fullName>Sent to MI</fullName>
            </value>
            <value>
                <fullName>No Warning Sent: Due to Open MI Case</fullName>
            </value>
            <value>
                <fullName>No Warning Sent: Previous Concerning Review Warning</fullName>
            </value>
            <value>
                <fullName>No Action Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>