metadata-sfdx/force-app/main/default/objects/Review__c/recordTypes/ConcerningReview.recordType-meta.xml
<RecordType>
    <fullName>ConcerningReview</fullName>
    <active>true</active>
    <description>This recordtype is used for concerning reviews created from the Thumbtack database.</description>
    <label>Concerning Review</label>
</RecordType>