metadata-sfdx/force-app/main/default/objects/Review__c/listViews/AllNoWarningSentPreviousConcern.listView-meta.xml
<ListView>
    <fullName>AllNoWarningSentPreviousConcern</fullName>
    <columns>NAME</columns>
    <columns>ProAccount__c</columns>
    <columns>rev_usr_user_id_reviewed__c</columns>
    <columns>CustomerAccount__c</columns>
    <columns>rev_usr_user_id_reviewer__c</columns>
    <columns>rev_rating__c</columns>
    <columns>rev_text__c</columns>
    <columns>rev_private_feedback_to_thumbtack__c</columns>
    <columns>bid_bid_id__c</columns>
    <columns>rev_review_time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReviewAuditOutcome__c</field>
        <operation>equals</operation>
        <value>No Warning Sent: Previous Concerning Review Warning</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Review__c.ConcerningReview</value>
    </filters>
    <label>All - No Warning Sent: Previous Concern</label>
    <sharedTo>
        <group>TPHMIAssistants</group>
        <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>