metadata-sfdx/force-app/main/default/objects/Review__c/listViews/ToAudit.listView-meta.xml
<ListView>
    <fullName>ToAudit</fullName>
    <columns>NAME</columns>
    <columns>ReviewAudit__c</columns>
    <columns>ProAccount__c</columns>
    <columns>rev_text__c</columns>
    <columns>rev_private_feedback_to_thumbtack__c</columns>
    <columns>rev_review_time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReviewAuditOutcome__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Review__c.ConcerningReview</value>
    </filters>
    <label>01: To Audit</label>
    <sharedTo>
        <group>TPHMIAssistants</group>
        <role>SharedServicesUserTPH</role>
        <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>