metadata-sfdx/force-app/main/default/objects/Review__c/listViews/XDataCleanup.listView-meta.xml
<ListView>
    <fullName>XDataCleanup</fullName>
    <columns>NAME</columns>
    <columns>ReviewAudit__c</columns>
    <columns>ReviewAuditOutcome__c</columns>
    <columns>ProAccount__c</columns>
    <columns>rev_usr_user_id_reviewed__c</columns>
    <columns>CustomerAccount__c</columns>
    <columns>rev_usr_user_id_reviewer__c</columns>
    <columns>rev_rating__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>rev_text__c</columns>
    <columns>rev_private_feedback_to_thumbtack__c</columns>
    <columns>bid_bid_id__c</columns>
    <columns>rev_review_time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReviewAuditOutcome__c</field>
        <operation>equals</operation>
        <value>Sent to MI</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Review__c.ConcerningReview</value>
    </filters>
    <label>X - Data Cleanup</label>
    <sharedTo>
        <role>SystemLevelAccess</role>
    </sharedTo>
</ListView>